test/testdata/variables/undeclared_assignment_error_local.lox
{
  // lint warning: 'a' has not been declared
  // error: 'a' has not been declared
  a = 1;
}
